--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -10,6 +10,7 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    -webkit-text-stroke: 1px black;
   }
   
   .topnav a:hover {
