--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,6 @@
 body{
     background-color: black;
-    color: aquamarine;
+    color: red;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
 }
