--- a/CSS/Roster.css
+++ b/CSS/Roster.css
@@ -252,3 +252,8 @@ img.hover{
     background-color: #555; /* Add a dark-grey background on hover */
   }
 
+.collaboration{
+    align-content: center;
+    float: left;
+    margin-left: 50px;
+}
