added font changes
- Uploaded font files for OCR A Extended across the site
- Updated index.html to reflect changes

--- a/CSS/Roster.css
+++ b/CSS/Roster.css
@@ -257,3 +257,13 @@ img.hover{
     float: left;
     margin-left: 50px;
 }
+
+@font-face {
+    font-family: 'OCRAExtendedRegular';
+    src: url('ocraextended.eot?#iefix');
+    src: url('ocraextended.eot?#iefix') format('embedded-opentype'),
+         url('ocraextended.woff') format('woff'),
+         url('ocraextended.ttf') format('truetype'),
+         url('ocraextended.svg#OCRAExtendedRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;}
