--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,5 +2,5 @@ body{
     background-color: black;
     color: red;
     margin: auto;
-    font: Arial Black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
